<resources>
    <string name="app_name">Inohom Smart Home Systems</string>

    <!-- Login Screen -->
    <string name="accounts">Hesaplar</string>
    <string name="connecting">Bağlanıyor...</string>
    <string name="authenticating">Kimlik Doğrulanıyor...</string>
    <string name="login_success">Giriş başarılı</string>
    <string name="connection_error">Bağlantı hatası</string>
    <string name="authentication_error">Kimlik doğrulama hatası</string>
    <string name="v170">v.1.7.0</string>

    <!-- Home Screen -->
    <string name="settings">Ayarlar</string>
    <string name="favorites">Favoriler</string>
    <string name="lighting">Aydınlatma</string>
    <string name="curtain">Perde</string>
    <string name="outlet">Priz</string>
    <string name="scenario">Senaryo</string>
    <string name="remote">Kumanda</string>
    <string name="camera">Kamera</string>
    <string name="alarm">Alarm</string>
    <string name="intercom">Interkom</string>
    <string name="system">Sistem</string>
    <string name="heating">Isıtma</string>
    <string name="ac">Klima</string>
    <string name="sensor">Sensör</string>
    <string name="site_management">Site Yönetimi</string>
    <string name="concierge">Konsiyerj</string>

    <!-- Home Screen Welcome -->
    <string name="welcome">Hoş Geldiniz</string>
    <string name="login_successful">Giriş başarılı!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geri">Geri</string>
    <string name="ayd_nlatma">Aydınlatma</string>
    <string name="ayarlar">Ayarlar</string>
</resources>