<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.lighting.LightingFragment">

    <LinearLayout
        android:id="@+id/lighting_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_light_on"
            android:contentDescription="@string/geri"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ayd_nlatma"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/ayarlar"
            app:tint="@color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLights"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/lighting_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        android:padding="8dp"
        tools:listitem="@layout/item_lighting_control" />

</androidx.constraintlayout.widget.ConstraintLayout>